tests/NormalTests/paczka1/small_fuzzy/86800445.err
Error in line 4: dvsadYI A916 89,6
Error in line 8: S1 S1 56,3
Error in line 9: S1 S1 38,8
Error in line 1: 2uR S193 53,5
Error in line 15: S1 A916 9,0
